server/src/parser/HipParser.ts
// Generated from ./server/src/parser/Hip.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { HipListener } from "./HipListener";
import { HipVisitor } from "./HipVisitor";


export class HipParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly BoolLiteral = 3;
	public static readonly IntegerLiteral = 4;
	public static readonly FloatLiteral = 5;
	public static readonly StringLiteral = 6;
	public static readonly CharacterLiteral = 7;
	public static readonly Identify = 8;
	public static readonly SPACES = 9;
	public static readonly LINE_COMMENT = 10;
	public static readonly BLOCK_COMMENT = 11;
	public static readonly KW_Zhe = 12;
	public static readonly KW_Ye = 13;
	public static readonly KW_Yi3 = 14;
	public static readonly KW_Fu = 15;
	public static readonly KW_Yi4 = 16;
	public static readonly KW_ALL = 17;
	public static readonly KW_Varg = 18;
	public static readonly KW_AsParam = 19;
	public static readonly KW_NoParam = 20;
	public static readonly KW_ReturnVoid = 21;
	public static readonly KW_FnBegin = 22;
	public static readonly KW_FnEnd1 = 23;
	public static readonly KW_FnEnd2 = 24;
	public static readonly KW_JYSM = 25;
	public static readonly KW_Return = 26;
	public static readonly KW_Return2 = 27;
	public static readonly KW_ThisFn = 28;
	public static readonly KW_Int = 29;
	public static readonly KW_Float = 30;
	public static readonly KW_String = 31;
	public static readonly KW_Fn = 32;
	public static readonly KW_Comma = 33;
	public static readonly KW_Colon = 34;
	public static readonly KW_SemiColon = 35;
	public static readonly KW_Period = 36;
	public static readonly RULE_compilationUnit = 0;
	public static readonly RULE_funcDef = 1;
	public static readonly RULE_funcHeader = 2;
	public static readonly RULE_funcBody = 3;
	public static readonly RULE_funcTail = 4;
	public static readonly RULE_params = 5;
	public static readonly RULE_paramNames = 6;
	public static readonly RULE_paramTypes = 7;
	public static readonly RULE_vararg = 8;
	public static readonly RULE_retType = 9;
	public static readonly RULE_type = 10;
	public static readonly RULE_stmt = 11;
	public static readonly RULE_emptyStmt = 12;
	public static readonly RULE_exprStmt = 13;
	public static readonly RULE_ifStmt = 14;
	public static readonly RULE_whileStmt = 15;
	public static readonly RULE_forStmt = 16;
	public static readonly RULE_returnStmt = 17;
	public static readonly RULE_defineStmt = 18;
	public static readonly RULE_assignStmt = 19;
	public static readonly RULE_expr = 20;
	public static readonly RULE_literal = 21;
	public static readonly RULE_split = 22;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"compilationUnit", "funcDef", "funcHeader", "funcBody", "funcTail", "params", 
		"paramNames", "paramTypes", "vararg", "retType", "type", "stmt", "emptyStmt", 
		"exprStmt", "ifStmt", "whileStmt", "forStmt", "returnStmt", "defineStmt", 
		"assignStmt", "expr", "literal", "split",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'\u3001'", "'todo'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, "BoolLiteral", "IntegerLiteral", "FloatLiteral", 
		"StringLiteral", "CharacterLiteral", "Identify", "SPACES", "LINE_COMMENT", 
		"BLOCK_COMMENT", "KW_Zhe", "KW_Ye", "KW_Yi3", "KW_Fu", "KW_Yi4", "KW_ALL", 
		"KW_Varg", "KW_AsParam", "KW_NoParam", "KW_ReturnVoid", "KW_FnBegin", 
		"KW_FnEnd1", "KW_FnEnd2", "KW_JYSM", "KW_Return", "KW_Return2", "KW_ThisFn", 
		"KW_Int", "KW_Float", "KW_String", "KW_Fn", "KW_Comma", "KW_Colon", "KW_SemiColon", 
		"KW_Period",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(HipParser._LITERAL_NAMES, HipParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return HipParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "Hip.g4"; }

	// @Override
	public get ruleNames(): string[] { return HipParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return HipParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(HipParser._ATN, this);
	}
	// @RuleVersion(0)
	public compilationUnit(): CompilationUnitContext {
		let _localctx: CompilationUnitContext = new CompilationUnitContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, HipParser.RULE_compilationUnit);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 49;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === HipParser.Identify || _la === HipParser.KW_JYSM) {
				{
				{
				this.state = 46;
				this.funcDef();
				}
				}
				this.state = 51;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 52;
			this.match(HipParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public funcDef(): FuncDefContext {
		let _localctx: FuncDefContext = new FuncDefContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, HipParser.RULE_funcDef);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 54;
			this.funcHeader();
			this.state = 55;
			this.funcBody();
			this.state = 56;
			this.funcTail();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public funcHeader(): FuncHeaderContext {
		let _localctx: FuncHeaderContext = new FuncHeaderContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, HipParser.RULE_funcHeader);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 68;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case HipParser.Identify:
				{
				this.state = 58;
				this.match(HipParser.Identify);
				this.state = 59;
				this.match(HipParser.KW_Zhe);
				this.state = 60;
				this.match(HipParser.KW_Comma);
				this.state = 61;
				this.match(HipParser.KW_Fn);
				this.state = 62;
				this.match(HipParser.KW_Ye);
				this.state = 63;
				this.match(HipParser.KW_Period);
				}
				break;
			case HipParser.KW_JYSM:
				{
				this.state = 64;
				this.match(HipParser.KW_JYSM);
				this.state = 65;
				this.match(HipParser.Identify);
				this.state = 66;
				this.match(HipParser.KW_Zhe);
				this.state = 67;
				this.match(HipParser.KW_Comma);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 72;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === HipParser.KW_ThisFn) {
				{
				this.state = 70;
				this.match(HipParser.KW_ThisFn);
				this.state = 71;
				this.match(HipParser.KW_Comma);
				}
			}

			this.state = 74;
			this.params();
			this.state = 75;
			this.retType();
			this.state = 76;
			this.match(HipParser.KW_FnBegin);
			this.state = 77;
			this.match(HipParser.KW_Colon);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public funcBody(): FuncBodyContext {
		let _localctx: FuncBodyContext = new FuncBodyContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, HipParser.RULE_funcBody);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 82;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << HipParser.T__1) | (1 << HipParser.BoolLiteral) | (1 << HipParser.IntegerLiteral) | (1 << HipParser.FloatLiteral) | (1 << HipParser.StringLiteral) | (1 << HipParser.CharacterLiteral))) !== 0) || _la === HipParser.KW_SemiColon) {
				{
				{
				this.state = 79;
				this.stmt();
				}
				}
				this.state = 84;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public funcTail(): FuncTailContext {
		let _localctx: FuncTailContext = new FuncTailContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, HipParser.RULE_funcTail);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 85;
			this.match(HipParser.KW_FnEnd1);
			this.state = 86;
			this.match(HipParser.Identify);
			this.state = 87;
			this.match(HipParser.KW_FnEnd2);
			this.state = 88;
			this.match(HipParser.KW_Period);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public params(): ParamsContext {
		let _localctx: ParamsContext = new ParamsContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, HipParser.RULE_params);
		let _la: number;
		try {
			this.state = 108;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case HipParser.KW_NoParam:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 90;
				this.match(HipParser.KW_NoParam);
				this.state = 91;
				this.split();
				}
				break;
			case HipParser.KW_Yi3:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 92;
				this.match(HipParser.KW_Yi3);
				this.state = 93;
				this.paramNames();
				this.state = 95;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === HipParser.KW_Varg) {
					{
					this.state = 94;
					this.vararg();
					}
				}

				this.state = 97;
				this.match(HipParser.KW_AsParam);
				this.state = 98;
				this.split();
				this.state = 104;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case HipParser.KW_Fu:
					{
					this.state = 99;
					this.paramTypes();
					}
					break;
				case HipParser.KW_ALL:
					{
					this.state = 100;
					this.match(HipParser.KW_ALL);
					this.state = 101;
					this.type();
					this.state = 102;
					this.match(HipParser.KW_Ye);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 106;
				this.match(HipParser.KW_Period);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public paramNames(): ParamNamesContext {
		let _localctx: ParamNamesContext = new ParamNamesContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, HipParser.RULE_paramNames);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 110;
			this.match(HipParser.Identify);
			this.state = 115;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === HipParser.T__0 || _la === HipParser.KW_Comma) {
				{
				{
				this.state = 111;
				_la = this._input.LA(1);
				if (!(_la === HipParser.T__0 || _la === HipParser.KW_Comma)) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				this.state = 112;
				this.match(HipParser.Identify);
				}
				}
				this.state = 117;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public paramTypes(): ParamTypesContext {
		let _localctx: ParamTypesContext = new ParamTypesContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, HipParser.RULE_paramTypes);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 118;
			this.match(HipParser.KW_Fu);
			this.state = 119;
			this.match(HipParser.Identify);
			this.state = 120;
			this.match(HipParser.KW_Comma);
			this.state = 121;
			this.type();
			this.state = 122;
			this.match(HipParser.KW_Ye);
			this.state = 134;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === HipParser.KW_Comma) {
				{
				{
				this.state = 123;
				this.match(HipParser.KW_Comma);
				this.state = 124;
				this.match(HipParser.Identify);
				this.state = 125;
				this.match(HipParser.KW_Comma);
				this.state = 127;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === HipParser.KW_Yi4) {
					{
					this.state = 126;
					this.match(HipParser.KW_Yi4);
					}
				}

				this.state = 129;
				this.type();
				this.state = 130;
				this.match(HipParser.KW_Ye);
				}
				}
				this.state = 136;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public vararg(): VarargContext {
		let _localctx: VarargContext = new VarargContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, HipParser.RULE_vararg);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 137;
			this.match(HipParser.KW_Varg);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public retType(): RetTypeContext {
		let _localctx: RetTypeContext = new RetTypeContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, HipParser.RULE_retType);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 148;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case HipParser.KW_ReturnVoid:
				{
				this.state = 139;
				this.match(HipParser.KW_ReturnVoid);
				}
				break;
			case HipParser.KW_Return:
				{
				this.state = 140;
				this.match(HipParser.KW_Return);
				this.state = 141;
				this.type();
				}
				break;
			case HipParser.KW_Yi3:
			case HipParser.KW_Int:
			case HipParser.KW_Float:
			case HipParser.KW_String:
				{
				this.state = 143;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === HipParser.KW_Yi3) {
					{
					this.state = 142;
					this.match(HipParser.KW_Yi3);
					}
				}

				this.state = 145;
				this.type();
				this.state = 146;
				this.match(HipParser.KW_Return2);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 150;
			this.match(HipParser.KW_Period);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public type(): TypeContext {
		let _localctx: TypeContext = new TypeContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, HipParser.RULE_type);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 152;
			_la = this._input.LA(1);
			if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << HipParser.KW_Int) | (1 << HipParser.KW_Float) | (1 << HipParser.KW_String))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public stmt(): StmtContext {
		let _localctx: StmtContext = new StmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, HipParser.RULE_stmt);
		try {
			this.state = 162;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 12, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 154;
				this.emptyStmt();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 155;
				this.exprStmt();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 156;
				this.ifStmt();
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 157;
				this.whileStmt();
				}
				break;

			case 5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 158;
				this.forStmt();
				}
				break;

			case 6:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 159;
				this.returnStmt();
				}
				break;

			case 7:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 160;
				this.defineStmt();
				}
				break;

			case 8:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 161;
				this.assignStmt();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public emptyStmt(): EmptyStmtContext {
		let _localctx: EmptyStmtContext = new EmptyStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, HipParser.RULE_emptyStmt);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 164;
			this.match(HipParser.KW_SemiColon);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public exprStmt(): ExprStmtContext {
		let _localctx: ExprStmtContext = new ExprStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, HipParser.RULE_exprStmt);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 166;
			this.expr();
			this.state = 167;
			this.match(HipParser.KW_SemiColon);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public ifStmt(): IfStmtContext {
		let _localctx: IfStmtContext = new IfStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, HipParser.RULE_ifStmt);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 169;
			this.match(HipParser.T__1);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public whileStmt(): WhileStmtContext {
		let _localctx: WhileStmtContext = new WhileStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, HipParser.RULE_whileStmt);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 171;
			this.match(HipParser.T__1);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public forStmt(): ForStmtContext {
		let _localctx: ForStmtContext = new ForStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 32, HipParser.RULE_forStmt);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 173;
			this.match(HipParser.T__1);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public returnStmt(): ReturnStmtContext {
		let _localctx: ReturnStmtContext = new ReturnStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 34, HipParser.RULE_returnStmt);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 175;
			this.match(HipParser.T__1);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public defineStmt(): DefineStmtContext {
		let _localctx: DefineStmtContext = new DefineStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 36, HipParser.RULE_defineStmt);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 177;
			this.match(HipParser.T__1);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public assignStmt(): AssignStmtContext {
		let _localctx: AssignStmtContext = new AssignStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 38, HipParser.RULE_assignStmt);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 179;
			this.match(HipParser.T__1);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public expr(): ExprContext {
		let _localctx: ExprContext = new ExprContext(this._ctx, this.state);
		this.enterRule(_localctx, 40, HipParser.RULE_expr);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 181;
			this.literal();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public literal(): LiteralContext {
		let _localctx: LiteralContext = new LiteralContext(this._ctx, this.state);
		this.enterRule(_localctx, 42, HipParser.RULE_literal);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 183;
			_la = this._input.LA(1);
			if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << HipParser.BoolLiteral) | (1 << HipParser.IntegerLiteral) | (1 << HipParser.FloatLiteral) | (1 << HipParser.StringLiteral) | (1 << HipParser.CharacterLiteral))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public split(): SplitContext {
		let _localctx: SplitContext = new SplitContext(this._ctx, this.state);
		this.enterRule(_localctx, 44, HipParser.RULE_split);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 185;
			_la = this._input.LA(1);
			if (!(_la === HipParser.KW_Comma || _la === HipParser.KW_Period)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!HipParser.__ATN) {
			HipParser.__ATN = new ATNDeserializer().deserialize(Utils.toCharArray(HipParser._serializedATN));
		}

		return HipParser.__ATN;
	}

}

export class CompilationUnitContext extends ParserRuleContext {
	public EOF(): TerminalNode { return this.getToken(HipParser.EOF, 0); }
	public funcDef(): FuncDefContext[];
	public funcDef(i: number): FuncDefContext;
	public funcDef(i?: number): FuncDefContext | FuncDefContext[] {
		if (i === undefined) {
			return this.getRuleContexts(FuncDefContext);
		} else {
			return this.getRuleContext(i, FuncDefContext);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return HipParser.RULE_compilationUnit; }
	// @Override
	public enterRule(listener: HipListener): void {
		if (listener.enterCompilationUnit) {
			listener.enterCompilationUnit(this);
		}
	}
	// @Override
	public exitRule(listener: HipListener): void {
		if (listener.exitCompilationUnit) {
			listener.exitCompilationUnit(this);
		}
	}
	// @Override
	public accept<Result>(visitor: HipVisitor<Result>): Result {
		if (visitor.visitCompilationUnit) {
			return visitor.visitCompilationUnit(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class FuncDefContext extends ParserRuleContext {
	public funcHeader(): FuncHeaderContext {
		return this.getRuleContext(0, FuncHeaderContext);
	}
	public funcBody(): FuncBodyContext {
		return this.getRuleContext(0, FuncBodyContext);
	}
	public funcTail(): FuncTailContext {
		return this.getRuleContext(0, FuncTailContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return HipParser.RULE_funcDef; }
	// @Override
	public enterRule(listener: HipListener): void {
		if (listener.enterFuncDef) {
			listener.enterFuncDef(this);
		}
	}
	// @Override
	public exitRule(listener: HipListener): void {
		if (listener.exitFuncDef) {
			listener.exitFuncDef(this);
		}
	}
	// @Override
	public accept<Result>(visitor: HipVisitor<Result>): Result {
		if (visitor.visitFuncDef) {
			return visitor.visitFuncDef(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}

